Fixed testimonal shifting visuals

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -638,7 +638,7 @@ Testimonials
 
 .quotes.slide.slide-left,
 .citation.slide.slide-left {
-	transition: all 0.4s linear;
+	transition: all 0s linear;
 }
 
 #testimonials span {
